--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>SVG Basics</title>
+  <title>SVG Lesson 2</title>
 </head>
 
 <body>
-  <div class="canvas"></div>
+  <div class="canvas">
+    <svg width="600" height="600">
+      <rect></rect>
+    </svg>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
   <script src="index.js"></script>
 </body>
