--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </svg>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
-  <script src="index.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
