--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <div class="canvas">
     <svg width="600" height="600">
       <rect></rect>
+      <rect></rect>
+      <rect></rect>
     </svg>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
