--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div class="canvas">
-    <svg width="600" height="600">
-
+    <svg width="400" height="200">
+      <!-- <circle></circle> -->
     </svg>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
