--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+  <h1>Bar Chart</h1>
   <div class="canvas">
-    <svg width="400" height="200">
+    <svg width="600" height="300">
       <rect></rect>
     </svg>
   </div>
