--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-  <h1>Bar Chart</h1>
-  <div class="canvas">
-
+  <div class="container">
+    <h1>Bar Chart</h1>
+    <div class="canvas">
+    </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
   <script src="app.js"></script>
